Bổ sung thêm architecture & Checklist